--- a/loja/src/components/formucadastro/formucadastro.css
+++ b/loja/src/components/formucadastro/formucadastro.css
@@ -1,4 +1,4 @@
-form {
+.formCadastro {
     width: 30%;
     text-align: center;
     grid-column: 2;
@@ -11,7 +11,7 @@ form {
     border-radius: 10px
 }
 
-h2 {
+.h2Cadastro {
     margin-bottom: 5px;
     text-align: center;
     text-shadow: 0 4px 16px #fff;
@@ -19,7 +19,7 @@ h2 {
     font-weight: 100;
   }
 
-fieldset {
+.fieldCadastro {
     margin: 0;
     background-color:  rgb(241, 217, 0);
     border: none;
@@ -29,11 +29,11 @@ fieldset {
       border-radius: 5px;
     }
 
-ul {
+.ulCadastro {
 margin: 0;
 padding: 0;}
 
-li {
+.liCadastro {
 display: grid;
 align-items: center;
 margin: 10px;}
@@ -44,18 +44,18 @@ text-align: center;
 padding: 5px;
         }
 
-label {
+.labelCadastro {
 text-align: left;
 padding-bottom: 2px;
         }
 
-input {
+.inputCadastro {
 padding: 5px;
 border: 1px solid #ddd;
 border-radius: 5px;
         }
 
-  button {
+  .btnCadastro {
     padding: 10px;
     border:1px solid rgba(0,0,0,0);
     border-radius: 5px;
